--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <script src="./renderer.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
@@ -11,9 +12,8 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
 
-    <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
-    </script>
+    <br/><label>Width: <input id="width" type="text" value="400"/></label>
+    <br/><label>Height: <input id="height" type="text" value="400"/></label>
+    <br/><button id="resize">Resize</button>
   </body>
 </html>
