--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <script src="./renderer.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
   </head>
   <body>
     <h1>Hello World!</h1>
